[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
sqlalchemy = "2.0"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
fastapi = "^0.111.1"
greenlet = "^3.0.3"
pytest-async = "^0.1.1"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
